# conan-training-basic-lib1

./: .gitignore  CMakeLists.txt  README.md  conan_upload.sh  conanfile.py
src/: add.cpp
